Fixed text overflow in some form buttons

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -32,6 +32,11 @@
     margin: 5px;
 }
 
+.machine-type-btn {
+    height: 15vh;
+    margin: 5px;
+}
+
 label {
     width: 100%;
 }
